--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,9 @@
 <body>
     <div>Time: good time</div>
     <a href="./member/list.html" th:href="@{/member/list}">Member List</a>
+    <a href="#">Log in</a>
+    <a href="#">Log out</a>
+    <a href="#">Sign up</a>
 </body>
 
 </html>
