create table elements and add directory to index

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
 <body>
     <div>Time: good time</div>
     <a href="./member/list.html" th:href="@{/member/list}">Member List</a>
-    <a href="#">Log in</a>
-    <a href="#">Log out</a>
-    <a href="#">Sign up</a>
+    <a href="./login.html" th:href="@{/login}">Log in</a>
+    <a href="./logout.html" th:href="@{/logout}">Log out</a>
+    <a href="./register.html" th:href="@{/register}">Sign up</a>
 </body>
 
 </html>
