--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -24,16 +24,22 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <th>input1</th>
+                    <th>input2</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <td>a</td>
+                    <td>b</td>
+                </tr>
+                <tr>
+                    <td>a</td>
+                    <td>b</td>
+                </tr>
+                <tr>
+                    <td>a</td>
+                    <td>b</td>
                 </tr>
             </tbody>
         </table>
