--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,11 +8,13 @@
 </head>
 
 <body>
-    <div>Time: good time</div>
-    <a href="./member/list.html" th:href="@{/member/list}">Member List</a>
-    <a href="./login.html" th:href="@{/login}">Log in</a>
-    <a href="./logout.html" th:href="@{/logout}">Log out</a>
-    <a href="./register.html" th:href="@{/register}">Sign up</a>
+    <div class="container">
+        <div class="">Time: good time</div>
+        <a href="./member/list.html" th:href="@{/member/list}">Member List</a>
+        <a href="./login.html" th:href="@{/login}">Log in</a>
+        <a href="./logout.html" th:href="@{/logout}">Log out</a>
+        <a href="./register.html" th:href="@{/register}">Sign up</a>
+    </div>
 </body>
 
 </html>
