--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>input1</th>
+                    <th><a href="./view.html">input1</a></th>
                     <th>input2</th>
                 </tr>
             </thead>
