--- a/src/main/resources/templates/member/edit.html
+++ b/src/main/resources/templates/member/edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,9 @@
 </head>
 
 <body>
+    <div class="conatiner">
 
+    </div>
 </body>
 
 </html>
