--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -43,6 +43,8 @@
                 </tr>
             </tbody>
         </table>
+        <div class="text-center"><a href="../index.html" th:href="@{/index}"><button class="btn btn-success">Go
+                    home</button></a></div>
     </div>
 </body>
 
