--- a/src/main/resources/templates/member/view.html
+++ b/src/main/resources/templates/member/view.html
@@ -15,6 +15,10 @@
         consequat. Duis
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        <div class="text-center"><a href="./list.html" th:href="@{/index}"><button class="btn btn-success">Go
+                    back</button></a></div>
+        <div class="text-center"><a href="../index.html" th:href="@{/index}"><button class="btn btn-success">Go
+                    home</button></a></div>
     </div>
 </body>
 
