--- a/src/main/resources/templates/commonCode/edit.html
+++ b/src/main/resources/templates/commonCode/edit.html
@@ -15,9 +15,9 @@
  -->
 
     <form th:action="@{/commonCode/read}">
-        <input type="text" placholder="name" name="name">
-        <input type="password" name="password">
-        <button type="submit"></button>
+        <input type="text" placholder="name" name="NAME">
+        <input type="text" name="PASSWORD">
+        <button type="submit">submit</button>
     </form>
 </body>
 
