--- a/src/main/resources/templates/commonCode/read4.html
+++ b/src/main/resources/templates/commonCode/read4.html
@@ -21,8 +21,10 @@
     <div class="container">
         <table class="table">
             <tbody>
-                <tr th:each="resultData: ${resultList}">
-                    <td th:text="${resultData.KEYWORD}"></td>
+                <!-- <tr th:each="resultData: ${resultList}"> -->
+                <tr>
+                    <td th:text="${resultMap.NAME}"></td>
+                    <td th:text="${resultMap.MEMBER_ID}"></td>
                 </tr>
             </tbody>
         </table>
