--- a/src/main/resources/templates/commonCode/edit4.html
+++ b/src/main/resources/templates/commonCode/edit4.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <form th:action="@{/commonCode/read4}">
+    <form th:action="@{/read4}">
         <input type="text" name="MEMBER_ID"></div>
         <input type="text" name="NAME"></div>
         <button type="submit">submit</button>
